burger menu - resolver bug overflow

--- a/burger/style.css
+++ b/burger/style.css
@@ -3,6 +3,9 @@ html, body{
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+.overflow-control{
+  overflow-x: hidden;
+}
 .main-container{
   white-space: nowrap;
   position: relative;
